@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -178,12 +178,6 @@ public class MockHttpServletRequest implements HttpServletRequest {
 	@Nullable
 	private String contentType;
 
-	@Nullable
-	private ServletInputStream inputStream;
-
-	@Nullable
-	private BufferedReader reader;
-
 	private final Map<String, String[]> parameters = new LinkedHashMap<>(16);
 
 	private String protocol = DEFAULT_PROTOCOL;
@@ -198,8 +192,8 @@ public class MockHttpServletRequest implements HttpServletRequest {
 
 	private String remoteHost = DEFAULT_REMOTE_HOST;
 
-	/** List of locales in descending order. */
-	private final LinkedList<Locale> locales = new LinkedList<>();
+	/** List of locales in descending order */
+	private final List<Locale> locales = new LinkedList<>();
 
 	private boolean secure = false;
 
@@ -403,11 +397,12 @@ public class MockHttpServletRequest implements HttpServletRequest {
 
 	private void updateContentTypeHeader() {
 		if (StringUtils.hasLength(this.contentType)) {
-			String value = this.contentType;
-			if (StringUtils.hasLength(this.characterEncoding) && !this.contentType.toLowerCase().contains(CHARSET_PREFIX)) {
-				value += ';' + CHARSET_PREFIX + this.characterEncoding;
+			StringBuilder sb = new StringBuilder(this.contentType);
+			if (!this.contentType.toLowerCase().contains(CHARSET_PREFIX) &&
+					StringUtils.hasLength(this.characterEncoding)) {
+				sb.append(";").append(CHARSET_PREFIX).append(this.characterEncoding);
 			}
-			doAddHeaderValue(HttpHeaders.CONTENT_TYPE, value, true);
+			doAddHeaderValue(HttpHeaders.CONTENT_TYPE, sb.toString(), true);
 		}
 	}
 
@@ -422,8 +417,6 @@ public class MockHttpServletRequest implements HttpServletRequest {
 	 */
 	public void setContent(@Nullable byte[] content) {
 		this.content = content;
-		this.inputStream = null;
-		this.reader = null;
 	}
 
 	/**
@@ -499,18 +492,12 @@ public class MockHttpServletRequest implements HttpServletRequest {
 
 	@Override
 	public ServletInputStream getInputStream() {
-		if (this.inputStream != null) {
-			return this.inputStream;
+		if (this.content != null) {
+			return new DelegatingServletInputStream(new ByteArrayInputStream(this.content));
 		}
-		else if (this.reader != null) {
-			throw new IllegalStateException(
-					"Cannot call getInputStream() after getReader() has already been called for the current request")			;
+		else {
+			return EMPTY_SERVLET_INPUT_STREAM;
 		}
-
-		this.inputStream = (this.content != null ?
-				new DelegatingServletInputStream(new ByteArrayInputStream(this.content)) :
-				EMPTY_SERVLET_INPUT_STREAM);
-		return this.inputStream;
 	}
 
 	/**
@@ -708,25 +695,16 @@ public class MockHttpServletRequest implements HttpServletRequest {
 
 	@Override
 	public BufferedReader getReader() throws UnsupportedEncodingException {
-		if (this.reader != null) {
-			return this.reader;
-		}
-		else if (this.inputStream != null) {
-			throw new IllegalStateException(
-					"Cannot call getReader() after getInputStream() has already been called for the current request")			;
-		}
-
 		if (this.content != null) {
 			InputStream sourceStream = new ByteArrayInputStream(this.content);
 			Reader sourceReader = (this.characterEncoding != null) ?
 					new InputStreamReader(sourceStream, this.characterEncoding) :
 					new InputStreamReader(sourceStream);
-			this.reader = new BufferedReader(sourceReader);
+			return new BufferedReader(sourceReader);
 		}
 		else {
-			this.reader = EMPTY_BUFFERED_READER;
+			return EMPTY_BUFFERED_READER;
 		}
-		return this.reader;
 	}
 
 	public void setRemoteAddr(String remoteAddr) {
@@ -779,7 +757,7 @@ public class MockHttpServletRequest implements HttpServletRequest {
 	 */
 	public void addPreferredLocale(Locale locale) {
 		Assert.notNull(locale, "Locale must not be null");
-		this.locales.addFirst(locale);
+		this.locales.add(0, locale);
 		updateAcceptLanguageHeader();
 	}
 
@@ -817,7 +795,7 @@ public class MockHttpServletRequest implements HttpServletRequest {
 	 */
 	@Override
 	public Locale getLocale() {
-		return this.locales.getFirst();
+		return this.locales.get(0);
 	}
 
 	/**
@@ -1015,9 +993,6 @@ public class MockHttpServletRequest implements HttpServletRequest {
 				List<Locale> locales = headers.getAcceptLanguageAsLocales();
 				this.locales.clear();
 				this.locales.addAll(locales);
-				if (this.locales.isEmpty()) {
-					this.locales.add(Locale.ENGLISH);
-				}
 			}
 			catch (IllegalArgumentException ex) {
 				// Invalid Accept-Language format -> just store plain header
